--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LV1DrugiPut">
         <activity
-            android:name=".view.MovieDetailActivity"
+            android:name=".MovieDetailActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
